# pgpx

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  planing.md  pyproject.toml
.github/workflows/: pgmq_python.yml  pgpx_python.yml
src/pgpx/: __init__.py  connection.py  exceptions.py  types.py
tests/: test_connection.py  test_exceptions.py  test_types.py
